--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,3 +51,13 @@ ul li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 /*--------------------*/
+
+/* Убираем стрелки у select */
+select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+  }
+  
+  select::-ms-expand {
+	display: none;
+  }
